# DesktopAquarium

./: .gitignore  DesktopAquariumFirstPassSpec.md  DesktopAquariumSpec.md  LICENSE  collection.html  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  settings.html  vite.config.js
.github/workflows/: release.yml
src/: collection.js  main.js  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  energy.rs  input.rs  lib.rs  main.rs  rarity.rs  save.rs  state.rs  tray.rs
src/data/: creatures.json  decorations.js
src/renderer/: canvas.js  colorMode.js  colors.js  sprites.js
src/simulation/: achievements.js  creature.js  discovery.js  environment.js  firebase.js  leaderboard.js  messageBottles.js  particles.js  tank.js
